bk_ida/gobmkida/c2/gtp_final_status_list
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3116:17: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v3 = 2 * ( ( v20.m128i_i32[0] ^ 0x76696C61 | v20.m128i_u16[2] ^ 0x65) != 0) + 1; 
             ~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3116:49: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v3 = 2 * ( ( v20.m128i_i32[0] ^ 0x76696C61 | v20.m128i_u16[2] ^ 0x65) != 0) + 1; 
                                             ~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3117:12: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( !( v20.m128i_u8[4] | v20.m128i_i32[0] ^ 0x64616564) ) 
        ~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3117:30: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( !( v20.m128i_u8[4] | v20.m128i_i32[0] ^ 0x64616564) ) 
                          ~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3120:9: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( v20.m128i_u8[4] | v20.m128i_i32[0] ^ 0x696B6573 ) 
     ~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3120:27: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( v20.m128i_u8[4] | v20.m128i_i32[0] ^ 0x696B6573 ) 
                       ~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3124:76: error: use of undeclared identifier 'xmmword_4A1080'
if ( _mm_movemask_epi8( _mm_cmpeq_epi8( _mm_load_si128( ( const __m128i *)&xmmword_4A1080), v5)) != 0xFFFF ) 
                                                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3126:70: error: use of undeclared identifier 'xmmword_4A1090'
v7 = ( unsigned int)_mm_movemask_epi8( _mm_cmpeq_epi8( v5, ( __m128i)xmmword_4A1090)); 
                                                                     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3130:9: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( v20.m128i_u8[4] | v20.m128i_i32[0] ^ 0x656D6164 ) 
     ~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3130:27: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( v20.m128i_u8[4] | v20.m128i_i32[0] ^ 0x656D6164 ) 
                       ~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/interface/play_gtp.c:3133:42: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
return gtp_failure( "invalid status", v20.m128i_u8[4], v7, v6); 
                                      ~~~^~~~~~~~~
11 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_final_status_list/src/obj/2/play_gtp.o] Error 1
